# Frognance

./: .pre-commit-config.yaml  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.in  requirements.txt
accounts/: admin.py  forms.py  models.py  services.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
finance/: admin.py  api_views.py  forms.py  models.py  serializers.py  services.py  urls.py  views.py
finance/migrations/: 0001_initial.py  0002_alter_transaction_table.py  0003_alter_transaction_table.py  0004_usergroup_category_group_transaction_group_and_more.py  0005_alter_usergroupmember_group_and_more.py  0006_invitation.py  0007_alter_invitation_unique_together_and_more.py  0008_alter_category_user.py  0009_add_base_categories.py
frognance/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html  footer.html  header.html  home.html
templates/accounts/: edit_profile.html
templates/finance/: finance_base.html
templates/group/: create_group.html  group_list.html  group_members.html  invitations_list.html  invite_to_group.html
templates/operation/: add_category.html  add_transaction.html  create_group.html  create_income.html  dashboard.html  group_list.html  income.html  income_list.html  transaction_detail.html
templates/registration/: login.html  register.html
